Fix overflowing text

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure {
 	margin-bottom: 1rem;
+	overflow-wrap: break-word;
 }
 
 img {
