--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -92,6 +92,7 @@
         max-width: 37.5rem;
         width: 40%;
         height: auto;
+        border-radius: var(--border-radius);
 
         @media screen and (min-width: 62.5em) {
             margin-bottom: -1.5rem;
